EXIF text-wrap fix

--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,6 @@ html, body {
     flex-direction: column;
     font-family: 'SFProText', sans-serif;
     color: #181818;
-    opacity: 1; /* Debug purpose only */
 }
 
 .info-header {
@@ -290,17 +289,34 @@ html, body {
 }
 
 .exif-section {
+    display: flex;
+    flex-direction: column;
+    margin: 14px 0px 0px 9px;
+    gap: 14px;
     font-size: 0.875rem;
     color: #888;
 }
 
-.exif-section i {
-    font-size: 1.15rem;
-    margin: 0 8.75px 0 18px;
+.exif-item {
+    display: flex;
+    align-items: center;
+    gap: 8px;
 }
 
-.exif-section p {
-    margin: 14px 0;
+.exif-section i {
+    display: flex;
+    justify-content: center;
+    width: 18px;
+    font-size: 1.15rem;
+}
+
+.exif-section p{
+    margin: 0px 0px 0px 14px;
+    color: #888;
+}
+
+.exif-section p span {
+    white-space: nowrap;
 }
 
 .thin-divider {
